--- a/app/src/main/res/layout/record_main.xml
+++ b/app/src/main/res/layout/record_main.xml
@@ -57,4 +57,18 @@
 		android:textColor="#fff"
 		android:text="STOP TRACKING" />
 
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="1"
+		android:gravity="start|bottom" >
+
+		<Button
+			android:id="@+id/buttonLogout"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Logout"
+			/>
+	</LinearLayout>
+
 </LinearLayout>
