--- a/app/src/main/res/values/api.xml
+++ b/app/src/main/res/values/api.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="api_root" translatable="false">https://www.cc.puv.fi/~e1601124/gps_tracker/api/</string>
+    <string name="default_api_root" translatable="false">https://www.cc.puv.fi/~e1601124/gps_tracker/api/</string>
 </resources>
