--- a/app/src/main/res/layout/map_main.xml
+++ b/app/src/main/res/layout/map_main.xml
@@ -29,11 +29,9 @@
         android:layout_height="wrap_content"
         android:text="Map control" />
 
-    <FrameLayout
-        android:layout_marginTop="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+    <androidx.fragment.app.FragmentContainerView
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:id="@+id/mapFragment" />
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
